rust/transpiler/tests/errors/void_element_with_children.hyper
<br>content inside void</br>
